[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/client/unit_test.gd" type="Script" id=1]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=2]

[node name="UnitTest" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = 160.0
margin_right = -160.0
margin_bottom = -160.0

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
margin_right = 960.0
margin_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer"]
margin_right = 960.0
margin_bottom = 400.0
rect_min_size = Vector2( 960, 400 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 30.0

[node name="Button" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "按钮A"

[node name="Button2" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 317.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "按钮B"

[node name="Button3" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 321.0
margin_right = 478.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "按钮C"

[node name="PlayerCount" type="SpinBox" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 482.0
margin_right = 638.0
margin_bottom = 30.0
size_flags_horizontal = 3
min_value = 2.0
max_value = 8.0
value = 4.0
align = 1
suffix = "个玩家"

[node name="DrawTimes" type="SpinBox" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 799.0
margin_bottom = 30.0
size_flags_horizontal = 3
min_value = 3.0
max_value = 3.0
value = 3.0
align = 1
prefix = "每人拿"
suffix = "次"

[node name="DrawCount" type="OptionButton" parent="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 803.0
margin_right = 960.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "一次 2 墩 (4 张)"
items = [ "一次 2 墩 (4 张)", null, false, 4, null, "一次 1 墩 (2 张)", null, true, 2, null ]
selected = 0

[node name="PlayerLabel" type="RichTextLabel" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 960.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 360 )
bbcode_enabled = true
bbcode_text = "Debug Information"
text = "Debug Information"

[connection signal="value_changed" from="Control/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/PlayerCount" to="." method="_on_PlayerCount_value_changed"]
